连接数据库

--- a/src/config/db.properties
+++ b/src/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:3306/study
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/iCloud
 jdbc.user=root
 jdbc.password=root
